force-app/main/default/objects/Car__c/fields/Consumption__c.field-meta.xml
<CustomField>
    <fullName>Consumption__c</fullName>
    <formula>TotalFuel__c/ TotalKm__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumption</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>