force-app/main/default/objects/Car__c/fields/KMALL__c.field-meta.xml
<CustomField>
    <fullName>KMALL__c</fullName>
    <formula>PreProgrammKM__c +  TotalKm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KMALL</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>