force-app/main/default/objects/Car__c/fields/PreProgrammKM__c.field-meta.xml
<CustomField>
    <fullName>PreProgrammKM__c</fullName>
    <label>PreProgrammKM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>