force-app/main/default/objects/Car__c/fields/TotalFuel__c.field-meta.xml
<CustomField>
    <fullName>TotalFuel__c</fullName>
    <label>TotalFuel</label>
    <summarizedField>FuelLoad__c.Amount__c</summarizedField>
    <summaryForeignKey>FuelLoad__c.CarId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>