force-app/main/default/objects/Car__c/fields/TotalKm__c.field-meta.xml
<CustomField>
    <fullName>TotalKm__c</fullName>
    <label>TotalKm</label>
    <summarizedField>KmPerDay__c.Amount__c</summarizedField>
    <summaryForeignKey>KmPerDay__c.CarId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>